# provable-execution-pipeline

./: Cargo.toml  README.md
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml  build.rs
host/src/: main.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
